# multi-agent-orchestration-lab

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: quality.yml
.pytest_cache/v/cache/: nodeids
.ruff_cache/0.15.22/: 4664591756441576468
src/orchestration_lab/: __init__.py  api.py  database.py  domain.py  main.py  provider.py  service.py  simulation.py
src/orchestration_lab/engines/: base.py  crewai_engine.py  langgraph_engine.py
src/orchestration_lab/static/: app.js  index.html  styles.css
tests/: test_orchestration.py
