[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-orchestration-lab"
version = "0.1.0"
description = "Same multi-agent use case implemented with CrewAI and LangGraph."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = ["fastapi>=0.111", "groq>=0.11", "pydantic>=2.7", "uvicorn[standard]>=0.29"]

[project.optional-dependencies]
crewai = ["crewai>=0.100"]
langgraph = ["langgraph>=0.2"]
all = ["crewai>=0.100", "langgraph>=0.2"]
dev = ["httpx>=0.27", "pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[project.scripts]
multi-agent-lab = "orchestration_lab.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestration_lab"]
artifacts = ["src/orchestration_lab/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

